tests/baselines/reference/parserGreaterThanTokenAmbiguity14.errors.txt
==== tests/cases/compiler/parserGreaterThanTokenAmbiguity14.ts (1 errors) ====
    1 >>
    = 2;
    ~
!!! parserGreaterThanTokenAmbiguity14.ts(2,1): error TS1003: Identifier expected.